[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["play"]

[dependencies]
anyhow = "1.0.80"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ipnet = "2.9.0"
rand = "0.8.5"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
