[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["play"]

[dependencies]
anyhow = "1.0.80"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
humantime = "2.1.0"
ipnet = "2.9.0"
serde_json = "1.0.115"
tracing = "0.1.40"
netavark = "1.10.3"
netlink-packet-route = "0.18.1"
netns-rs = "0.1.0"
sysctl = "0.5.5"
serde = { version = "1.0.199", features = ["std"] }
itertools = "0.12.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
