[package]
name = "play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "~4.4.18", features = ["derive"] }
ctrlc = "3.4.4"
playground = { path = "../" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ipnet = "2.9.0"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }