[package]
name = "playagent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "~4.4.18", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = "3.4.4"
hostname = "0.4.0"
parking_lot = "0.12.2"
playground = { path = "../" }
serde = { version = "1.0.199", features = ["std", "derive", "rc"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
