[package]
name = "playctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "~4.4.18", features = ["derive"] }
playground = { path = "../" }
playagent = { path = "../playagent" }
serde = { version = "1.0.199", features = ["std", "derive", "rc"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.4", features=["json"] }
futures = "0.3.30"
tokio-util = "0.7.10"
parking_lot = "0.12.2"
ipnet = "2.9.0"
